# GFA-dead-end-counter

./: Cargo.toml  README.md
src/: gfa.rs  main.rs  misc.rs
tests/: bad_segment_line.gfa  circular.gfa  circular_blank_lines.gfa  linear.gfa  seq.fasta  seq.fastq
