[package]
name = "deadends"
version = "0.0.1"
authors = ["Ryan Wick <rrwick@gmail.com>"]
edition = "2018"
description = "GFA dead-end counter"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo", "wrap_help"] }
flate2 = "1.0"
rustc-hash = "1.0"
