[package]
name = "deadends"
version = "0.1.0"
authors = ["Ryan Wick <rrwick@gmail.com>"]
edition = "2018"
description = "GFA dead-end counter"
rust-version = "1.66"
repository = "https://github.com/rrwick/GFA-dead-end-counter"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo", "wrap_help"] }
flate2 = "1.0"
rustc-hash = "1.0"
